# instagen

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: server.rs  utils.rs
server/src/application/commands/: mod.rs
server/src/domain/entities/: mod.rs  post.rs
server/src/domain/repositories/: post_repository.rs
server/src/domain/services/: image_generation_service.rs
server/src/infrastructure/repositories/: .#mod.rs  instagram_post_repository.rs
server/src/infrastructure/services/: open_ai_adapter.rs
src/: config.rs  constants.rs  main.rs  server.rs  utils.rs
src/application/commands/: delete_image.rs  generate_and_upload_image.rs  generate_image_from_prompt.rs  mod.rs  post_image.rs  upload_image.rs
src/application/services/: auth_service.rs
src/domain/entities/: image.rs
src/domain/repositories/: image_repository.rs  mod.rs
src/domain/services/: image_generation_service.rs  mod.rs
src/infrastructure/repositories/: instagram_post_repository.rs  mod.rs  s3_image_repository.rs
src/infrastructure/services/: facebook_auth_service.rs  mod.rs  open_ai_adapter.rs
src/presentation/: api.rs  config.rs
static/: .#index.html  index.html
static/css/: output.css
templates/: img.html
