[package]
name = "instagen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.19.1"
tokio = { version = "1.36.0", features = ["full"] }
open = "5"
webbrowser = "0.8.13"
rustls-pemfile = "2.1.1"
rustls-pki-types = "1.4.0"
rustls = "0.23.4"
tokio-rustls = "0.26.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
chrono = "0.4.37"
