[package]
name = "instagen-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.19.1"
tokio = { version = "1.36.0", features = ["full"] }
open = "5"
webbrowser = "0.8.13"
rustls-pemfile = "2.1.1"
rustls-pki-types = "1.4.0"
rustls = "0.23.4"
tokio-rustls = "0.26.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
chrono = "0.4.37"
dotenv = "0.15.0"
percent-encoding = "2.3.1"
axum = { version = "0.7.5", features = ["macros"] }
askama = "0.12.1"
tower-http = { version = "0.5.2", features = ["fs", "trace"]}
tracing-subscriber = "0.3.18"
serde_json = "1.0.116"
base64 = "0.22.1"
clap = { version = "4.5.4", features = ["derive"] }
axum-server = { version =  "0.6.0", features = ["tls-rustls"] }
tracing = "0.1.40"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
